# english

./: .gitignore  Home.md  LICENSE  README  README.md  eng.spec  index.html  main.py  pyproject.toml
interpreter/: __main__.py  evaluator.py  main.py  parser.py  runtime.py
playground/: general.js  index.html  interpreter.js  styles.css
